Fix assignments being invisible - todo fix card transparency

--- a/main.css
+++ b/main.css
@@ -49,14 +49,7 @@ li a {
  * For the pop-out sidebar.
  */
 .ETRkCe .YVvGBb {
-    color: darkblue;
-}
-
-/*
- * Each "card" element on the homepage.
- */
-.Aopndd *, .K6Ovqd {
-    color: white;
+    color: #24292e;
 }
 
 /*
